fix: fix misaligned formulas in latex blockquotes

--- a/quarkdown-html/src/main/resources/render/theme/layout/latex.scss
+++ b/quarkdown-html/src/main/resources/render/theme/layout/latex.scss
@@ -55,16 +55,8 @@
 
   blockquote {
     border-left: 2px solid;
-    padding: 4px 1.5em;
+    padding: 14px 1.5em;
     font-style: italic;
-
-    :first-child {
-      margin-top: 10px;
-    }
-
-    :last-child {
-      margin-bottom: 10px;
-    }
 
     .attribution {
       text-align: end;
